# iceMPM_3Dm

./: .gitignore  CMakeLists.txt  README.md  force_plot_from_hdf5.nb  tekscan_hdf5.nb
cli/: main.cpp
converter/: converter.cpp  converter.h  main.cpp  visualpoint.cpp  visualpoint.h
generator/: grainprocessor.cpp  grainprocessor.h  main.cpp
gui/: backgroundworker.cpp  backgroundworker.h  icons.qrc  main.cpp  parameters_wrapper.h
gui/vtk/: vtk_representation.cpp  vtk_representation.h
gui/windows/: mainwindow.cpp  mainwindow.h  mainwindow.ui
input_data/: p1.json  p2.json  p3.json  p4.json  tank1b.json
simulation/: gpu_implementation6.cpp  gpu_implementation6.h  gpu_partition_3d.cu  gpu_partition_3d.h  helper_math.cuh  host_side_soa.cpp  host_side_soa.h  model_3d.cpp  model_3d.h  mpm_kernels.cuh  parameters_sim_3d.cpp  parameters_sim_3d.h  point_3d.cpp  point_3d.h  proxypoint3d.cpp  proxypoint3d.h  snapshotmanager.cpp  snapshotmanager.h
